Add supertest config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,11 @@
         "exclude": [
             "./node_modules/*",
             "dist"
-        ]
+        ],
+        "files": [
+            "./test/globals.d.ts",
+            "./test/globals.global.d.ts"
+          ]
         
     
 }
