--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   "author": "Marcos Reis",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/module-alias": "^2.0.1",
-    "@types/node": "^16.7.4",
+    "@types/node": "12.12.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
@@ -34,6 +35,9 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.7.6",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "module-alias": "^2.2.2"
   }
 }
