--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start:dev": "ts-node-dev src/index.ts",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
+    "style:check":"prettier --check 'src/**/*.ts' 'test/**/*.ts'",
+    "style:fix":"prettier --write 'src/**/*.ts' 'test/**/*.ts'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:functional": "jest --projects ./test --runInBand"
   },
@@ -29,6 +31,7 @@
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
     "jest": "^27.1.0",
+    "prettier": "^2.3.2",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8",
@@ -36,7 +39,6 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "module-alias": "^2.2.2"
   }
