--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start:dev": "ts-node-dev src/index.ts",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "style:check":"prettier --check 'src/**/*.ts' 'test/**/*.ts'",
-    "style:fix":"prettier --write 'src/**/*.ts' 'test/**/*.ts'",
+    "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
+    "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:functional": "jest --projects ./test --runInBand"
   },
@@ -30,6 +30,8 @@
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "jest": "^27.1.0",
     "prettier": "^2.3.2",
     "supertest": "^6.1.6",
