--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/config": "^0.0.39",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/module-alias": "^2.0.1",
@@ -44,6 +45,7 @@
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
     "axios": "^0.21.1",
+    "config": "^3.3.6",
     "express": "^4.17.1",
     "module-alias": "^2.2.2"
   }
